<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etDolar"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textAlignment="viewEnd" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/txvDolar_txt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="0.04"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etEuro"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textAlignment="viewEnd" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/txvEuro_txt" />
    </LinearLayout>

    <RadioGroup
        android:layout_width="155dp"
        android:layout_height="70dp"
        android:checkedButton="@+id/rbEaD">

        <RadioButton
            android:id="@+id/rbEaD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rdbEuro_txt" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/rdbDolar_txt" />
    </RadioGroup>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edtCambio"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="0.849119"
            android:textAlignment="viewEnd" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.74"
            android:text="@string/txvEaD_txt"
            android:textAlignment="viewStart"
            android:textStyle="bold" />

        <Button
            android:id="@+id/botonConvertir"
            android:layout_width="127dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/btnConventir_txt" />

    </LinearLayout>

</LinearLayout>
